--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -204,6 +204,9 @@ dependencies {
 
     implementation 'com.android.support:multidex:2.0.1'
 
+    implementation project(':react-native-lottie-splash-screen')
+    implementation project(':lottie-react-native')
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
