--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-community/netinfo": "^5.9.9",
     "@react-native-firebase/app": "^8.4.7",
     "@react-native-firebase/auth": "^9.3.5",
-    "@react-navigation/bottom-tabs": "^5.10.7",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/drawer": "^5.11.2",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.8.7",
@@ -32,9 +32,11 @@
     "expo-image-picker": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lottie-react-native": "^3.5.0",
     "mongoose": "^5.10.15",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-animated-hamburger": "0.0.2",
     "react-native-cardview": "^2.0.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^4.0.2",
@@ -42,10 +44,11 @@
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-input-prompt": "^1.0.0",
+    "react-native-lottie-splash-screen": "^0.1.14",
     "react-native-maps": "0.27.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-navigation-directions": "^1.0.4",
-    "react-native-paper": "^4.5.0",
+    "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
@@ -53,8 +56,10 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^7.1.0",
+    "rn-wave-bottom-bar": "^1.0.3",
     "victory-native": "^35.3.1"
   },
   "devDependencies": {
