--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-firebase/app": "^8.4.7",
     "@react-native-firebase/auth": "^9.3.5",
     "@react-navigation/bottom-tabs": "^5.11.10",
-    "@react-navigation/drawer": "^5.11.2",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.8.7",
     "@react-navigation/stack": "^5.12.4",
@@ -36,7 +36,6 @@
     "mongoose": "^5.10.15",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-animated-hamburger": "0.0.2",
     "react-native-cardview": "^2.0.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^4.0.2",
@@ -59,6 +58,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^7.1.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-wave-bottom-bar": "^1.0.3",
     "victory-native": "^35.3.1"
   },
