--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.1",
+    "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.13.0",
     "react-native-snap-carousel": "^3.9.1",
@@ -59,6 +60,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-unimodules": "^0.12.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.4.5",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "rn-wave-bottom-bar": "^1.0.3",
     "victory-native": "^35.3.1"
