--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react-native-cardview": "^2.0.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^4.0.2",
+    "react-native-fb-image-grid": "^0.0.5",
     "react-native-fbsdk": "^2.0.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-input-prompt": "^1.0.0",
     "react-native-lottie-splash-screen": "^0.1.14",
     "react-native-maps": "0.27.1",
