--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.63.3",
     "react-native-cardview": "^2.0.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dotenv": "^2.5.5",
     "react-native-dropdown-picker": "^4.0.2",
     "react-native-fb-image-grid": "^0.0.5",
     "react-native-fbsdk": "^2.0.0",
